// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Snapshot match 1`] = `
<Header
  activeTrigger={null}
  additionalLogos={Array []}
  chevronOverAvatar={false}
  closeMenu={[Function]}
  communityId="someId"
  communitySelector={
    Array [
      Object {
        "label": "Community Name",
        "value": "1",
      },
    ]
  }
  hideSearch={false}
  isMobileOpen={false}
  loginUrl="/some/login/url"
  logos={Array []}
  menuItems={Array []}
  onMobileToggleClick={[Function]}
  openMenu={[Function]}
  openedMenu={null}
  pageId="home"
  profile={null}
  registerUrl="/some/register/url"
  theme={
    Object {
      "additionalLogos": "src-shared-components-tc-communities-Header-___style__additionalLogos___3q_l-",
      "authorize": "src-shared-components-tc-communities-Header-___style__authorize___3ARhM",
      "avatar": "src-shared-components-tc-communities-Header-___style__avatar___2my2E",
      "avatarMobile": "src-shared-components-tc-communities-Header-___style__avatarMobile___2uNTU",
      "btnLogin": "src-shared-components-tc-communities-Header-___style__btnLogin___37sgV",
      "btnRegister": "src-shared-components-tc-communities-Header-___style__btnRegister___2mlu6",
      "challengeDropdown": "src-shared-components-tc-communities-Header-___style__challengeDropdown___-JHIK",
      "chevronDown": "src-shared-components-tc-communities-Header-___style__chevronDown___pkTgN",
      "container": "src-shared-components-tc-communities-Header-___style__container___2P8yC",
      "header": "src-shared-components-tc-communities-Header-___style__header___3TwY_",
      "logo": "src-shared-components-tc-communities-Header-___style__logo___z2xG6",
      "logos": "src-shared-components-tc-communities-Header-___style__logos___38nqG",
      "logosWrap": "src-shared-components-tc-communities-Header-___style__logosWrap___2mFpt",
      "menu": "src-shared-components-tc-communities-Header-___style__menu___2jUFE",
      "menuItem": "src-shared-components-tc-communities-Header-___style__menuItem___2akRq",
      "menuLink": "src-shared-components-tc-communities-Header-___style__menuLink___3gVFG",
      "menuLinkActive": "src-shared-components-tc-communities-Header-___style__menuLinkActive___XHiLm",
      "menuWrap": "src-shared-components-tc-communities-Header-___style__menuWrap___a0TMC",
      "menuWrapOpen": "src-shared-components-tc-communities-Header-___style__menuWrapOpen___1YVvV",
      "mobileToggle": "src-shared-components-tc-communities-Header-___style__mobileToggle___fRfj2",
      "search": "src-shared-components-tc-communities-Header-___style__search___3BJGl",
      "userMenu": "src-shared-components-tc-communities-Header-___style__userMenu___V4Thb",
      "userMenuHandle": "src-shared-components-tc-communities-Header-___style__userMenuHandle___38gE0",
      "userWrap": "src-shared-components-tc-communities-Header-___style__userWrap___NN47o",
      "userWrapMobile": "src-shared-components-tc-communities-Header-___style__userWrapMobile___3s9lp",
    }
  }
/>
`;

exports[`Snapshot match 2`] = `
<Header
  activeTrigger={null}
  additionalLogos={Array []}
  chevronOverAvatar={false}
  closeMenu={[Function]}
  communityId="someId"
  communitySelector={
    Array [
      Object {
        "label": "Community Name",
        "value": "1",
      },
    ]
  }
  cssUrl="some/css/url"
  hideSearch={false}
  isMobileOpen={true}
  loginUrl="/some/login/url"
  logos={
    Array [
      "some/logo/url",
    ]
  }
  menuItems={
    Array [
      Object {
        "title": "Menu Item 1",
        "url": "pageId1",
      },
      Object {
        "title": "Menu Item 2",
        "url": "pageId2",
      },
      Object {
        "title": "Menu Item 3",
        "url": "pageId3",
      },
    ]
  }
  onMobileToggleClick={[Function]}
  openMenu={[Function]}
  openedMenu={null}
  pageId="other"
  profile={null}
  registerUrl="/some/register/url"
  theme={
    Object {
      "additionalLogos": "src-shared-components-tc-communities-Header-___style__additionalLogos___3q_l-",
      "authorize": "src-shared-components-tc-communities-Header-___style__authorize___3ARhM",
      "avatar": "src-shared-components-tc-communities-Header-___style__avatar___2my2E",
      "avatarMobile": "src-shared-components-tc-communities-Header-___style__avatarMobile___2uNTU",
      "btnLogin": "src-shared-components-tc-communities-Header-___style__btnLogin___37sgV",
      "btnRegister": "src-shared-components-tc-communities-Header-___style__btnRegister___2mlu6",
      "challengeDropdown": "src-shared-components-tc-communities-Header-___style__challengeDropdown___-JHIK",
      "chevronDown": "src-shared-components-tc-communities-Header-___style__chevronDown___pkTgN",
      "container": "src-shared-components-tc-communities-Header-___style__container___2P8yC",
      "header": "src-shared-components-tc-communities-Header-___style__header___3TwY_",
      "logo": "src-shared-components-tc-communities-Header-___style__logo___z2xG6",
      "logos": "src-shared-components-tc-communities-Header-___style__logos___38nqG",
      "logosWrap": "src-shared-components-tc-communities-Header-___style__logosWrap___2mFpt",
      "menu": "src-shared-components-tc-communities-Header-___style__menu___2jUFE",
      "menuItem": "src-shared-components-tc-communities-Header-___style__menuItem___2akRq",
      "menuLink": "src-shared-components-tc-communities-Header-___style__menuLink___3gVFG",
      "menuLinkActive": "src-shared-components-tc-communities-Header-___style__menuLinkActive___XHiLm",
      "menuWrap": "src-shared-components-tc-communities-Header-___style__menuWrap___a0TMC",
      "menuWrapOpen": "src-shared-components-tc-communities-Header-___style__menuWrapOpen___1YVvV",
      "mobileToggle": "src-shared-components-tc-communities-Header-___style__mobileToggle___fRfj2",
      "search": "src-shared-components-tc-communities-Header-___style__search___3BJGl",
      "userMenu": "src-shared-components-tc-communities-Header-___style__userMenu___V4Thb",
      "userMenuHandle": "src-shared-components-tc-communities-Header-___style__userMenuHandle___38gE0",
      "userWrap": "src-shared-components-tc-communities-Header-___style__userWrap___NN47o",
      "userWrapMobile": "src-shared-components-tc-communities-Header-___style__userWrapMobile___3s9lp",
    }
  }
/>
`;
